--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -28,18 +28,27 @@ jobs:
       run: terraform version
 
     - name: Terraform Init
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secret.AWS_SECRET_ACCESS_KEY }}
       run: terraform init
 
     - name: Terraform va;idate
       run: terraform validate
 
-    - name:Terraform format
+    - name: Terraform format
       run: terraform fmt -check
 
     - name: Terraform plan
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secret.AWS_SECRET_ACCESS_KEY }}
       run: terraform plan
 
     - name: Terraform Apply
+      env:
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secret.AWS_SECRET_ACCESS_KEY }}
       if: github.ref == 'refs/heads/$default-branch' && github.event_name == 'push'
       run: terraform apply -auto-approve
 
