--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -31,33 +31,36 @@ jobs:
         terraform_version: 0.12.29
 
     - name: get paths of changed functions
-      id: getpath
+      id: getfile
       run: |
-        echo "::set-output name=paths::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | cut -d '/' -f1,2 | uniq | xargs)"
+        echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.sha }} | cut -d '/' -f1,2 | uniq | xargs)"
 
     - name: print paths
-      run: echo ${{ steps.getpath.outputs.paths }}
+      run: |
+        for i in ${{ steps.getfile.outputs.files }}
+          echo $i
+        done
 
     - name: Terraform Init
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        for i in ${{ steps.getpath.outputs.paths }}
+        for i in ${{ steps.getfile.outputs.files }}
         do
           terraform init $i
         done
 
     - name: Terraform validate
       run: |
-        for i in ${{ steps.getpath.outputs.paths }}
+        for i in ${{ steps.getfile.outputs.files }}
         do
           terraform validate $i
         done
 
     - name: Terraform format
       run: |
-        for i in ${{ steps.getpath.outputs.paths }}
+        for i in ${{ steps.getfile.outputs.files }}
         do
           terraform fmt -check $i
         done
@@ -67,7 +70,7 @@ jobs:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       run: |
-        for i in ${{ steps.getpath.outputs.paths }}
+        for i in ${{ steps.getfile.outputs.files }}
         do
           terraform plan $i
         done
@@ -78,7 +81,7 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
       if: github.ref == 'refs/heads/$default-branch' && github.event_name == 'push'
       run: |
-        for i in ${{ steps.getpath.outputs.paths }}
+        for i in ${{ steps.getfile.outputs.files }}
         do
           terraform apply -auto-approve $i
         done
