--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -22,68 +22,71 @@ jobs:
         shell: bash
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+      - name: Checkout
+        uses: actions/checkout@v2
 
-    - name: Setup Terraform
-      uses: hashicorp/setup-terraform@v1
-      with:
-        terraform_version: 0.12.29
+      - name: Setup Terraform
+        uses: hashicorp/setup-terraform@v1
+        with:
+          terraform_version: 0.12.29
 
-    - name: Get paths of changed functions
-      id: getfile
-      run: |
-        echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.event.pull_request.head.sha }} | cut -d '/' -f1,2 | uniq | xargs)"
+      - name: Get paths of changed functions
+        id: getfile
+        run: |
+          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.event.pull_request.head.sha }} | cut -d '/' -f1,2 | uniq | xargs)"
 
-    - name: Print paths
-      run: |
-        for i in ${{ steps.getfile.outputs.files }}
-        do
-          echo $i
-        done
+      - name: Print output
+        run: echo ${{ steps.getfile.outputs.files }}
 
-    - name: Terraform Init
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        for i in ${{ steps.getfile.outputs.files }}
-        do
-          terraform init $i
-        done
+      - name: Print paths
+        run: |
+          for i in ${{ steps.getfile.outputs.files }}
+          do
+            echo $i
+          done
 
-    - name: Terraform validate
-      run: |
-        for i in ${{ steps.getfile.outputs.files }}
-        do
-          terraform validate $i
-        done
+      - name: Terraform Init
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          for i in ${{ steps.getfile.outputs.files }}
+          do
+            terraform init $i
+          done
 
-    - name: Terraform format
-      run: |
-        for i in ${{ steps.getfile.outputs.files }}
-        do
-          terraform fmt -check $i
-        done
+      - name: Terraform validate
+        run: |
+          for i in ${{ steps.getfile.outputs.files }}
+          do
+            terraform validate $i
+          done
 
-    - name: Terraform plan
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        for i in ${{ steps.getfile.outputs.files }}
-        do
-          terraform plan $i
-        done
+      - name: Terraform format
+        run: |
+          for i in ${{ steps.getfile.outputs.files }}
+          do
+            terraform fmt -check $i
+          done
 
-    - name: Terraform Apply
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      if: github.ref == 'refs/heads/$default-branch' && github.event_name == 'push'
-      run: |
-        for i in ${{ steps.getfile.outputs.files }}
-        do
-          terraform apply -auto-approve $i
-        done
+      - name: Terraform plan
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          for i in ${{ steps.getfile.outputs.files }}
+          do
+            terraform plan $i
+          done
+
+      - name: Terraform Apply
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        if: github.ref == 'refs/heads/$default-branch' && github.event_name == 'push'
+        run: |
+          for i in ${{ steps.getfile.outputs.files }}
+          do
+            terraform apply -auto-approve $i
+          done
 
