--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -3,7 +3,7 @@ name: 'Terraform'
 on:
   push:
     branches:
-      - $default-branch
+      - master
     paths:
       - 'stage/**'
       - 'prod/**'
