separated plan and apply to separate files

--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -1,12 +1,6 @@
-name: 'Terraform'
+name: 'terraform-plan'
 
 on:
-  push:
-    branches:
-      - master
-    paths:
-      - 'stage/**'
-      - 'prod/**'
   pull_request:
     paths:
       - 'stage/**'
@@ -14,7 +8,7 @@ on:
 
 jobs:
   terraform:
-    name: 'Terraform'
+    name: 'terraform-plan'
     runs-on: ubuntu-latest
 
     steps:
@@ -24,16 +18,7 @@ jobs:
           fetch-depth: 0
 
       - name: Debug gihub pull_request
-        if: github.event_name == 'pull_request'
-        run: |
-          echo ${{ github.event.pull_request }}
-
-      - name: Debug gihub push
-        if: github.event_name == 'push'
-        run: |
-          echo ${{ github.event.push.before }}
-          echo ${{ github.event.push.after }}
-          echo ${{ github.event.push.commits }}
+        run: echo ${{ github.event.pull_request }}
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
@@ -41,16 +26,9 @@ jobs:
           terraform_version: 0.12.29
 
       - name: Get paths of changed functions
-        if: github.event_name == 'pull_request'
         id: getfile
         run: |
           echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.event.pull_request.head.sha }} | cut -d '/' -f1,2 | uniq | xargs)"
-
-      - name: Get paths of changed functions
-        if: github.event_name == 'push'
-        id: getfile
-        run: |
-          echo "::set-output name=files::$(git diff-tree --no-commit-id --name-only -r ${{ github.event.push.before }} | cut -d '/' -f1,2 | uniq | xargs)"
 
       - name: Print output
         run: echo ${{ steps.getfile.outputs.files }}
@@ -87,16 +65,5 @@ jobs:
           for i in ${{ steps.getfile.outputs.files }}
           do
             terraform plan $i
-          done
-
-      - name: Terraform Apply
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        if: github.ref == 'refs/heads/master' && github.event_name == 'push'
-        run: |
-          for i in ${{ steps.getfile.outputs.files }}
-          do
-            terraform apply -auto-approve $i
           done
 
