changed way how to get number of changed files on merge

--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -21,11 +21,12 @@ jobs:
 
       - name: list files
         run: |
-          #URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${{ github.event.pull_request.number }}/files"
-          #FILES=$(curl -s -X GET -G $URL | jq -r '.[] | .filename')
-          #echo $FILES
           URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/commits/${GITHUB_SHA}/pulls"
-          echo $URL
+          PRNUM=$(curl -s -X GET -H "Accept: application/vnd.github.groot-preview+json" -G $URL | jq -r '.[] | .number')
+          echo $PRNUM
+          URL="https://api.github.com/repos/${GITHUB_REPOSITORY}/pulls/${PRNUM}/files"
+          FILES=$(curl -s -X GET -H "Accept: application/vnd.github.groot-preview+json" -G $URL | jq -r '.[] | .filename')
+          echo $FILES
 
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v1
