--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -5,7 +5,8 @@ on:
     branches:
       - master
     paths:
-      - '!_global/**'
+      - '!stage/_global/**'
+      - '!prod/_global/**'
       - 'stage/**'
       - 'prod/**'
 
