--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -3,7 +3,8 @@ name: 'terraform-plan'
 on:
   pull_request:
     paths:
-      - '!_global/**'
+      - '!stage/_global/**'
+      - '!prod/_global/**'
       - 'stage/**'
       - 'prod/**'
 
