--- a/.github/workflows/terraform-apply.yaml
+++ b/.github/workflows/terraform-apply.yaml
@@ -4,9 +4,10 @@ on:
   push:
     branches:
       - master
-    paths:
+    paths-ignore:
       - '!stage/_global/**'
       - '!prod/_global/**'
+    paths:
       - 'stage/**'
       - 'prod/**'
 
