--- a/.github/workflows/terraform-plan.yaml
+++ b/.github/workflows/terraform-plan.yaml
@@ -2,9 +2,10 @@ name: 'terraform-plan'
 
 on:
   pull_request:
-    paths:
+    paths-ignore:
       - '!stage/_global/**'
       - '!prod/_global/**'
+    paths:
       - 'stage/**'
       - 'prod/**'
 
